# rusant

./: .gitignore  Cargo.toml  Config.toml  README.md  build.rs
.github/workflows/: cicd.yaml
content/: app.gresource.xml  article-list.ui  call-section.ui  call-window.ui  contact-item.ui  contact-list.ui  feed-list.ui  help-overlay.ui  main-window.ui  rusant-call-pane.ui  rusant-contact-dialog.ui  rusant-contact-item.ui  rusant-contact-list.ui  rusant-contact-pane.ui  rusant-greeter.ui  rusant-help-overlay.ui  rusant-login.ui  rusant-main-window.ui  rusant-register.ui  rusant-ring-dialog.ui  style.css
rusant-shared/: Cargo.toml  build.rs  lib.rs  shared.h
rusant-shared/cproject/: Makefile
rusant-shared/cproject/src/include/: shared.h
rusant-shared/cproject/src/shared/: shared.c
rusant-sys/: Cargo.toml  build.rs  lib.rs
saltpanelo-sys/: Cargo.toml  build.rs  lib.rs
saltpanelo-sys/saltpanelo/: adapter.c  adapter.h  libsaltpanelo.h  libsaltpanelo_bridge.c  libsaltpanelo_bridge.h
src/: greeter.rs  login.rs  main.rs  register.rs
src/article_item/: mod.rs  template.rs
src/article_list/: mod.rs  template.rs
src/call_section/: mod.rs  template.rs
src/call_window/: mod.rs  template.rs
src/client/: main.rs
src/contact_item/: mod.rs  template.rs
src/contact_list/: mod.rs  template.rs
src/feed_item/: mod.rs  template.rs
src/feed_list/: mod.rs  template.rs
src/main_window/: mod.rs  template.rs
src/ports/: mod.rs
src/receiver/: main.rs  mod.rs
src/rusant/rusant_contact_dialog/: mod.rs  template.rs
src/rusant/rusant_contact_list/: template.rs
src/rusant/rusant_greeter/: mod.rs
src/rusant_call_pane/: mod.rs  template.rs
src/rusant_contact_dialog/: mod.rs  template.rs
src/rusant_contact_item/: mod.rs  template.rs
src/rusant_contact_list/: mod.rs  template.rs
src/rusant_contact_pane/: mod.rs  template.rs
src/rusant_greeter/: mod.rs  template.rs
src/rusant_login/: mod.rs  template.rs
src/rusant_main_window/: mod.rs  template.rs
src/rusant_register/: mod.rs  template.rs
src/rusant_ring_dialog/: mod.rs  template.rs
src/sender/: main.rs  mod.rs
src/server/: main.rs
src/utils/: mod.rs
