[package]
name = "rusant-shared"
version = "0.1.0"
edition = "2021"
build = "build.rs"
links = "shared"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "rusant_shared"
path = "lib.rs"

[build-dependencies]
bindgen = "0.63.0"
pkg-config = "0.3.26"