[package]
name = "rusant-sys"
authors = ["Jakob Waibel <mail@jakobwaibel.com>", "Felicitas Pojtinger <felicitas@pojtinger.com>"]
build = "build.rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rusant_sys"
path = "lib.rs"