[package]
name = "rusant-sys"
authors = ["Jakob Waibel <mail@jakobwaibel.com>", "Felicitas Pojtinger <felicitas@pojtinger.com>"]
build = "build.rs"
version = "0.1.0"
edition = "2021"
links = "sodium"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rusant_sys"
path = "lib.rs"

[build-dependencies]
bindgen = "0.63.0"
pkg-config = "0.3.26"

[dev-dependencies]
hex = "0.4.3"